[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "outbench"
version = "0.0.1"
authors = [{ name = "aahnik", email = "daw@aahnik.dev" }]
description = "Maintain a dynamic benchmarks table and choose the best fit algorithm based on current state."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/aahnik/outbench"
